Attempted fix for font not loading on mobile.
Using different font file types as described by https://kevq.uk/how-to-self-host-your-web-fonts/

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,17 @@
 @font-face {
-    font-family: 'Splatoon2';
-    src: '/fonts/Splatoon2.otf';
+    font-family: 'Splatoon1';
+    src: url('fonts/splatoon1-webfont.woff2') format('woff2'),
+        url('fonts/splatoon1-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'Splatoon1';
-    src: '/fonts/Splatoon1.otf';
+    font-family: 'Splatoon2';
+    src: url('fonts/splatoon2-webfont.woff2') format('woff2'),
+        url('fonts/splatoon2-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
